EXTRA_DIST = pyrpm.txt pyrpm-devel.txt pyrpm-tools.txt pyrpm-links.txt pycheckrc

pyrpm.html: pyrpm.txt
	asciidoc -b html4 $< > $@

pyrpm-tools.html: pyrpm-tools.txt
	asciidoc -b html4 $< > $@

pyrpm-tools.html: pyrpm-tools.txt
	asciidoc -b html4 $< > $@

pyrpm-links.html: pyrpm-links.txt
	asciidoc -b html4 $< > $@
